--- a/resources/config.json
+++ b/resources/config.json
@@ -2,7 +2,7 @@
   "DB_TYPE":"jdbc:mysql://",
   "DB_HOST":"localhost",
   "DB_PORT":"3306",
-  "DB_NAME":"brugtbog",
+  "DB_NAME":"brugtbogs",
   "DB_USER":"root",
   "DB_PASS":"louise",
   "SERVER_PORT":"8000",
